[gd_scene load_steps=4 format=3 uid="uid://game_scene"]

[ext_resource type="Script" path="res://scripts/game_scene_handler.gd" id="1_handler"]
[ext_resource type="Script" path="res://scripts/character.gd" id="2_character"]
[ext_resource type="Script" path="res://scripts/game_manager.gd" id="3_manager"]

[node name="GameScene" type="Node2D"]
script = ExtResource("1_handler")

[node name="GameManager" type="Node" parent="."]
script = ExtResource("2_manager")

[node name="Player" type="CharacterBody2D" parent="."]
position=Vector2(576, 324)
script = ExtResource("1_character")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
modulate=Color(1, 1, 1, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="HealthBar" type="ProgressBar" parent="UI"]
layout_mode=1
anchors_preset=2
anchor_top=1.0
anchor_bottom=1.0
offset_left=20.0
offset_top=-60.0
offset_right=220.0
offset_bottom=-20.0
grow_vertical=0
max_value=100.0
value=100.0
show_percentage=false

[node name="ManaBar" type="ProgressBar" parent="UI"]
layout_mode=1
anchors_preset=2
anchor_top=1.0
anchor_bottom=1.0
offset_left=20.0
offset_top=-30.0
offset_right=220.0
offset_bottom=-10.0
grow_vertical=0
max_value=50.0
value=50.0
show_percentage=false

[node name="CharacterName" type="Label" parent="UI"]
layout_mode=1
anchors_preset=1
anchor_left=0.5
anchor_right=0.5
offset_left=-100.0
offset_top=20.0
offset_right=100.0
offset_bottom=60.0
grow_horizontal=2
grow_vertical=0
text="Character Name"
horizontal_alignment=1

